--- a/angular.json
+++ b/angular.json
@@ -231,36 +231,36 @@
         },
         "studio-button": {
             "projectType": "library",
-            "root": "projects/studio-button",
-            "sourceRoot": "projects/studio-button/src",
+            "root": "button",
+            "sourceRoot": "button/src",
             "prefix": "lib",
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-ng-packagr:build",
                     "options": {
-                        "tsConfig": "projects/studio-button/tsconfig.lib.json",
-                        "project": "projects/studio-button/ng-package.json"
+                        "tsConfig": "button/tsconfig.lib.json",
+                        "project": "button/ng-package.json"
                     },
                     "configurations": {
                         "production": {
-                            "tsConfig": "projects/studio-button/tsconfig.lib.prod.json"
+                            "tsConfig": "button/tsconfig.lib.prod.json"
                         }
                     }
                 },
                 "test": {
                     "builder": "@angular-devkit/build-angular:karma",
                     "options": {
-                        "main": "projects/studio-button/src/test.ts",
-                        "tsConfig": "projects/studio-button/tsconfig.spec.json",
-                        "karmaConfig": "projects/studio-button/karma.conf.js"
+                        "main": "button/src/test.ts",
+                        "tsConfig": "button/tsconfig.spec.json",
+                        "karmaConfig": "button/karma.conf.js"
                     }
                 },
                 "lint": {
                     "builder": "@angular-devkit/build-angular:tslint",
                     "options": {
                         "tsConfig": [
-                            "projects/studio-button/tsconfig.lib.json",
-                            "projects/studio-button/tsconfig.spec.json"
+                            "button/tsconfig.lib.json",
+                            "button/tsconfig.spec.json"
                         ],
                         "exclude": [
                             "**/node_modules/**"
