--- a/angular.json
+++ b/angular.json
@@ -229,38 +229,118 @@
                 }
             }
         },
-        "studio-button": {
+        "button": {
             "projectType": "library",
-            "root": "button",
-            "sourceRoot": "button/src",
+            "root": "projects/button",
+            "sourceRoot": "projects/button/src",
             "prefix": "lib",
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-ng-packagr:build",
                     "options": {
-                        "tsConfig": "button/tsconfig.lib.json",
-                        "project": "button/ng-package.json"
+                        "tsConfig": "projects/button/tsconfig.lib.json",
+                        "project": "projects/button/ng-package.json"
                     },
                     "configurations": {
                         "production": {
-                            "tsConfig": "button/tsconfig.lib.prod.json"
+                            "tsConfig": "projects/button/tsconfig.lib.prod.json"
                         }
                     }
                 },
                 "test": {
                     "builder": "@angular-devkit/build-angular:karma",
                     "options": {
-                        "main": "button/src/test.ts",
-                        "tsConfig": "button/tsconfig.spec.json",
-                        "karmaConfig": "button/karma.conf.js"
+                        "main": "projects/button/src/test.ts",
+                        "tsConfig": "projects/button/tsconfig.spec.json",
+                        "karmaConfig": "projects/button/karma.conf.js"
                     }
                 },
                 "lint": {
                     "builder": "@angular-devkit/build-angular:tslint",
                     "options": {
                         "tsConfig": [
-                            "button/tsconfig.lib.json",
-                            "button/tsconfig.spec.json"
+                            "projects/button/tsconfig.lib.json",
+                            "projects/button/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "card": {
+            "projectType": "library",
+            "root": "projects/card",
+            "sourceRoot": "projects/card/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-ng-packagr:build",
+                    "options": {
+                        "tsConfig": "projects/card/tsconfig.lib.json",
+                        "project": "projects/card/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/card/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/card/src/test.ts",
+                        "tsConfig": "projects/card/tsconfig.spec.json",
+                        "karmaConfig": "projects/card/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/card/tsconfig.lib.json",
+                            "projects/card/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "dynamic-form": {
+            "projectType": "library",
+            "root": "projects/dynamic-form",
+            "sourceRoot": "projects/dynamic-form/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-ng-packagr:build",
+                    "options": {
+                        "tsConfig": "projects/dynamic-form/tsconfig.lib.json",
+                        "project": "projects/dynamic-form/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/dynamic-form/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/dynamic-form/src/test.ts",
+                        "tsConfig": "projects/dynamic-form/tsconfig.spec.json",
+                        "karmaConfig": "projects/dynamic-form/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/dynamic-form/tsconfig.lib.json",
+                            "projects/dynamic-form/tsconfig.spec.json"
                         ],
                         "exclude": [
                             "**/node_modules/**"
