--- a/projects/card/package.json
+++ b/projects/card/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "card",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^9.0.2",
-    "@angular/core": "^9.0.2",
-    "tslib": "^1.10.0"
-  }
+    "name": "@angular.studio/card",
+    "version": "0.0.2",
+    "peerDependencies": {
+        "@angular.studio/toolbar": "^0.0.3",
+        "@angular/common": "^9.0.2",
+        "@angular/core": "^9.0.2",
+        "tslib": "^1.10.0"
+    },
+    "devDependencies": {
+        "@angular/cdk": "^9.1.0",
+        "@angular/material": "^9.1.0"
+    }
 }
