--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "projects/board",
         "projects/board-button",
         "projects/button",
+        "projects/buttons",
         "projects/card",
+        "projects/datatable",
         "projects/dialog",
         "projects/dynamic-form",
+        "projects/features-table",
         "projects/login",
         "projects/plans",
         "projects/toggle",
