--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,9 +55,11 @@
       "@angular.studio/datatable": [
         "dist/datatable"
       ],
-      "buttons": [
-        "dist/buttons/buttons",
+      "@angular.studio/buttons": [
         "dist/buttons"
+      ],
+      "@angular.studio/confirm": [
+        "dist/confirm"
       ]
     }
   },
