--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,7 @@
     "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
     "version": 1,
     "cli": {
-        "packageManager": "yarn"
+        "packageManager": "pnpm"
     },
     "newProjectRoot": "projects",
     "projects": {
@@ -53,9 +53,15 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "node_modules/@clr/icons/clr-icons.min.css",
+                            "node_modules/@clr/ui/clr-ui.min.css",
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js",
+                            "node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js",
+                            "node_modules/@clr/icons/clr-icons.min.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
@@ -741,6 +747,126 @@
                         "tsConfig": [
                             "projects/stripe/tsconfig.lib.json",
                             "projects/stripe/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "clr-manager": {
+            "projectType": "library",
+            "root": "projects/clr-manager",
+            "sourceRoot": "projects/clr-manager/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/clr-manager/tsconfig.lib.json",
+                        "project": "projects/clr-manager/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/clr-manager/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/clr-manager/src/test.ts",
+                        "tsConfig": "projects/clr-manager/tsconfig.spec.json",
+                        "karmaConfig": "projects/clr-manager/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/clr-manager/tsconfig.lib.json",
+                            "projects/clr-manager/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "clr-search": {
+            "projectType": "library",
+            "root": "projects/clr-search",
+            "sourceRoot": "projects/clr-search/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/clr-search/tsconfig.lib.json",
+                        "project": "projects/clr-search/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/clr-search/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/clr-search/src/test.ts",
+                        "tsConfig": "projects/clr-search/tsconfig.spec.json",
+                        "karmaConfig": "projects/clr-search/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/clr-search/tsconfig.lib.json",
+                            "projects/clr-search/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "clr-form-field-editable": {
+            "projectType": "library",
+            "root": "projects/clr-form-field-editable",
+            "sourceRoot": "projects/clr-form-field-editable/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/clr-form-field-editable/tsconfig.lib.json",
+                        "project": "projects/clr-form-field-editable/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/clr-form-field-editable/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/clr-form-field-editable/src/test.ts",
+                        "tsConfig": "projects/clr-form-field-editable/tsconfig.spec.json",
+                        "karmaConfig": "projects/clr-form-field-editable/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/clr-form-field-editable/tsconfig.lib.json",
+                            "projects/clr-form-field-editable/tsconfig.spec.json"
                         ],
                         "exclude": [
                             "**/node_modules/**"
