--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --port 4300",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -26,43 +26,50 @@
     ],
     "private": true,
     "dependencies": {
-        "@angular.studio/board-button": "0.0.7",
-        "@angular/animations": "~9.0.2",
-        "@angular/common": "~9.0.2",
-        "@angular/compiler": "~9.0.2",
-        "@angular/core": "~9.0.2",
-        "@angular/flex-layout": "^9.0.0-beta.29",
-        "@angular/forms": "~9.0.2",
-        "@angular/platform-browser": "~9.0.2",
-        "@angular/platform-browser-dynamic": "~9.0.2",
-        "@angular/router": "~9.0.2",
-        "@types/stripe": "^7.13.22",
-        "rxjs": "~6.5.4",
-        "stripe": "^8.23.0",
-        "tslib": "^1.10.0",
-        "zone.js": "~0.10.2"
+        "@angular.studio/board-button": "0.0.8",
+        "@angular/animations": "~11.2.9",
+        "@angular/cdk": "^11.2.8",
+        "@angular/common": "~11.2.9",
+        "@angular/compiler": "~11.2.9",
+        "@angular/core": "~11.2.9",
+        "@angular/flex-layout": "^11.0.0-beta.33",
+        "@angular/forms": "~11.2.9",
+        "@angular/platform-browser": "~11.2.9",
+        "@angular/platform-browser-dynamic": "~11.2.9",
+        "@angular/router": "~11.2.9",
+        "@cds/core": "^5.1.1",
+        "@clr/angular": "^5.1.1",
+        "@clr/core": "^4.0.12",
+        "@clr/icons": "^5.1.1",
+        "@clr/ui": "^5.1.1",
+        "@types/stripe": "^8.0.416",
+        "@webcomponents/webcomponentsjs": "^2.5.0",
+        "rxjs": "~6.6.7",
+        "stripe": "^8.142.0",
+        "tslib": "^2.2.0",
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.900.3",
-        "@angular-devkit/build-ng-packagr": "~0.900.3",
-        "@angular/cli": "~9.0.3",
-        "@angular/compiler-cli": "~9.0.2",
-        "@angular/language-service": "~9.0.2",
-        "@types/jasmine": "~3.5.0",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^5.1.2",
-        "jasmine-core": "~3.5.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~4.3.0",
+        "@angular-devkit/build-angular": "~0.1102.8",
+        "@angular-devkit/build-ng-packagr": "~0.1002.0",
+        "@angular/cli": "~11.2.8",
+        "@angular/compiler-cli": "~11.2.9",
+        "@angular/language-service": "~11.2.9",
+        "@types/jasmine": "~3.6.9",
+        "@types/jasminewd2": "~2.0.8",
+        "@types/node": "^14.14.37",
+        "codelyzer": "^6.0.1",
+        "jasmine-core": "~3.7.1",
+        "jasmine-spec-reporter": "~6.0.0",
+        "karma": "~6.3.2",
         "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~2.1.0",
-        "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.2",
-        "ng-packagr": "^9.0.0",
-        "protractor": "~5.4.3",
-        "ts-node": "~8.3.0",
-        "tslint": "~5.18.0",
-        "typescript": "~3.7.5"
+        "karma-coverage-istanbul-reporter": "~3.0.3",
+        "karma-jasmine": "~4.0.1",
+        "karma-jasmine-html-reporter": "^1.5.4",
+        "ng-packagr": "^11.2.4",
+        "protractor": "~7.0.0",
+        "ts-node": "~9.1.1",
+        "tslint": "~5.20.1",
+        "typescript": "~4.1.2"
     }
 }
