--- a/projects/clr-form-field-editable/package.json
+++ b/projects/clr-form-field-editable/package.json
@@ -1,9 +1,11 @@
 {
     "name": "@angular.studio/clr-form-field-editable",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "peerDependencies": {
         "@angular/common": "^11.2.9",
         "@angular/core": "^11.2.9",
-        "tslib": "^2.0.0"
+        "tslib": "^2.0.0",
+        "@clr/core": "^4.0.12",
+        "@clr/ui": "^5.1.1"
     }
 }
