--- a/angular.json
+++ b/angular.json
@@ -875,7 +875,7 @@
                 }
             }
         },
-        "clr-form": {
+        "@angular.studio/clr-form": {
             "projectType": "library",
             "root": "projects/clr-form",
             "sourceRoot": "projects/clr-form/src",
@@ -907,6 +907,86 @@
                         "tsConfig": [
                             "projects/clr-form/tsconfig.lib.json",
                             "projects/clr-form/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "angularstudio-clr-wizard": {
+            "projectType": "library",
+            "root": "projects/angularstudio-clr-wizard",
+            "sourceRoot": "projects/angularstudio-clr-wizard/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/angularstudio-clr-wizard/tsconfig.lib.json",
+                        "project": "projects/angularstudio-clr-wizard/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/angularstudio-clr-wizard/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/angularstudio-clr-wizard/src/test.ts",
+                        "tsConfig": "projects/angularstudio-clr-wizard/tsconfig.spec.json",
+                        "karmaConfig": "projects/angularstudio-clr-wizard/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/angularstudio-clr-wizard/tsconfig.lib.json",
+                            "projects/angularstudio-clr-wizard/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "angularstudio-clr-confirm": {
+            "projectType": "library",
+            "root": "projects/angularstudio-clr-confirm",
+            "sourceRoot": "projects/angularstudio-clr-confirm/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/angularstudio-clr-confirm/tsconfig.lib.json",
+                        "project": "projects/angularstudio-clr-confirm/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/angularstudio-clr-confirm/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/angularstudio-clr-confirm/src/test.ts",
+                        "tsConfig": "projects/angularstudio-clr-confirm/tsconfig.spec.json",
+                        "karmaConfig": "projects/angularstudio-clr-confirm/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/angularstudio-clr-confirm/tsconfig.lib.json",
+                            "projects/angularstudio-clr-confirm/tsconfig.spec.json"
                         ],
                         "exclude": [
                             "**/node_modules/**"
