--- a/angular.json
+++ b/angular.json
@@ -875,7 +875,7 @@
                 }
             }
         },
-        "@angular.studio/clr-form": {
+        "clr-form": {
             "projectType": "library",
             "root": "projects/clr-form",
             "sourceRoot": "projects/clr-form/src",
@@ -987,6 +987,126 @@
                         "tsConfig": [
                             "projects/angularstudio-clr-confirm/tsconfig.lib.json",
                             "projects/angularstudio-clr-confirm/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "angularstudio-auth-jwt": {
+            "projectType": "library",
+            "root": "projects/angularstudio-auth-jwt",
+            "sourceRoot": "projects/angularstudio-auth-jwt/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/angularstudio-auth-jwt/tsconfig.lib.json",
+                        "project": "projects/angularstudio-auth-jwt/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/angularstudio-auth-jwt/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/angularstudio-auth-jwt/src/test.ts",
+                        "tsConfig": "projects/angularstudio-auth-jwt/tsconfig.spec.json",
+                        "karmaConfig": "projects/angularstudio-auth-jwt/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/angularstudio-auth-jwt/tsconfig.lib.json",
+                            "projects/angularstudio-auth-jwt/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "angularstudio-authentication": {
+            "projectType": "library",
+            "root": "projects/angularstudio-authentication",
+            "sourceRoot": "projects/angularstudio-authentication/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/angularstudio-authentication/tsconfig.lib.json",
+                        "project": "projects/angularstudio-authentication/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/angularstudio-authentication/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/angularstudio-authentication/src/test.ts",
+                        "tsConfig": "projects/angularstudio-authentication/tsconfig.spec.json",
+                        "karmaConfig": "projects/angularstudio-authentication/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/angularstudio-authentication/tsconfig.lib.json",
+                            "projects/angularstudio-authentication/tsconfig.spec.json"
+                        ],
+                        "exclude": [
+                            "**/node_modules/**"
+                        ]
+                    }
+                }
+            }
+        },
+        "angularstudio-clr-login": {
+            "projectType": "library",
+            "root": "projects/angularstudio-clr-login",
+            "sourceRoot": "projects/angularstudio-clr-login/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "tsConfig": "projects/angularstudio-clr-login/tsconfig.lib.json",
+                        "project": "projects/angularstudio-clr-login/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/angularstudio-clr-login/tsconfig.lib.prod.json"
+                        }
+                    }
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/angularstudio-clr-login/src/test.ts",
+                        "tsConfig": "projects/angularstudio-clr-login/tsconfig.spec.json",
+                        "karmaConfig": "projects/angularstudio-clr-login/karma.conf.js"
+                    }
+                },
+                "lint": {
+                    "builder": "@angular-devkit/build-angular:tslint",
+                    "options": {
+                        "tsConfig": [
+                            "projects/angularstudio-clr-login/tsconfig.lib.json",
+                            "projects/angularstudio-clr-login/tsconfig.spec.json"
                         ],
                         "exclude": [
                             "**/node_modules/**"
