--- a/projects/angularstudio-clr-login/package.json
+++ b/projects/angularstudio-clr-login/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "angularstudio-clr-login",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^11.2.9",
-    "@angular/core": "^11.2.9"
-  },
-  "dependencies": {
-    "@clr/core": "^4.0.12",
-    "@clr/ui": "^5.1.1",
-    "tslib": "^2.0.0"
-  }
+    "name": "@angular.studio/clr-login",
+    "version": "0.0.2",
+    "peerDependencies": {
+        "@angular/common": "^11.2.9",
+        "@angular/core": "^11.2.9",
+        "@clr/core": "^4.0.12",
+        "@clr/ui": "^5.1.1",
+        "tslib": "^2.0.0"
+    }
 }
