--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.1102.8",
         "@angular-devkit/build-ng-packagr": "~0.1002.0",
-        "@angular/cli": "~11.2.8",
+        "@angular/cli": "^11.2.12",
         "@angular/compiler-cli": "~11.2.9",
         "@angular/language-service": "~11.2.9",
         "@types/jasmine": "~3.6.9",
