--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "heroku-postbuild": "ng build --prod"
     },
     "workspaces": [
         "projects/board",
@@ -44,6 +45,7 @@
         "@clr/ui": "^5.1.1",
         "@types/stripe": "^8.0.416",
         "@webcomponents/webcomponentsjs": "^2.5.0",
+        "express": "^4.17.1",
         "rxjs": "~6.6.7",
         "stripe": "^8.142.0",
         "tslib": "^2.2.0",
