--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ],
     "private": true,
     "dependencies": {
+        "@angular-slider/ngx-slider": "^2.0.3",
         "@angular.studio/board-button": "0.0.8",
         "@angular/animations": "~11.2.9",
         "@angular/cdk": "^11.2.8",
