--- a/projects/clr-form/package.json
+++ b/projects/clr-form/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@angular.studio/clr-form",
-    "version": "0.0.12",
+    "version": "0.0.14",
     "peerDependencies": {
         "@angular/common": "^11.2.9",
         "@angular/core": "^11.2.9",
-        "tslib": "^2.0.0"
+        "tslib": "^2.0.0",
+        "@angular-slider/ngx-slider": "^2.0.3"
     }
 }
