--- a/projects/angularstudio-form-validators/package.json
+++ b/projects/angularstudio-form-validators/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@angular.studio/change-password",
-    "version": "0.0.4",
+    "name": "@angular.studio/form-validators",
+    "version": "0.0.1",
     "peerDependencies": {
         "@angular/common": "^11.2.13",
         "@angular/core": "^11.2.13"
