--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,10 @@
               "dist/angularstudio-clr-wizard/angularstudio-clr-wizard",
               "dist/angularstudio-clr-wizard"
             ],
+            "angularstudio-form-validators": [
+              "dist/angularstudio-form-validators/angularstudio-form-validators",
+              "dist/angularstudio-form-validators"
+            ],
             "angularstudio-modal": [
               "dist/angularstudio-modal/angularstudio-modal",
               "dist/angularstudio-modal"
